# Palindrome

./: CMakeLists.txt  Source.txt  Tests.cpp  main.cpp
libs/: lib.cpp  lib.h
